@@ -12,9 +12,3 @@ void tcp_metrics_init(void)
 {
 	printk("tcp_metrics_init()\n");
 }
-
-// temporary
-void tcp_tasklet_init(void)
-{
-	printk("tcp_tasklet_init()\n");
-}
