@@ -1,6 +1,7 @@
 arch/um/include/asm/thread_info.h	current_thread_info()
 fs/inode.c
 include/linux/slab.h  			kmalloc()
-net/socket.c				sock_mnt,init_inodecache
+net/socket.c				sock_mnt, init_inodecache()
 net/ipv4/af_inet.c			inet_init()
+net/ipv4/tcp_output.c			tcp_tasklet_init()
 
